force-app/main/default/objects/SEG_Excepciones_Caso__c/SEG_Excepciones_Caso__c.object-meta.xml
<CustomObject>
    <label>Excepciones Caso</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excepciones Caso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>