force-app/main/default/objects/SEG_Excepciones_Caso__c/fields/SEG_Contratos__c.field-meta.xml
<CustomField>
    <fullName>SEG_Contratos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratos</label>
    <referenceTo>SEG_Contratos__c</referenceTo>
    <relationshipLabel>Excepciones</relationshipLabel>
    <relationshipName>Excepciones_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>