force-app/main/default/objects/SEG_Excepciones_Caso__c/fields/SEG_ExcepcionesContrato__c.field-meta.xml
<CustomField>
    <fullName>SEG_ExcepcionesContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Excepciones Contratos</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SEG_Excepciones__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contratos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SEG_Excepciones__c</referenceTo>
    <relationshipLabel>Excepciones Caso (Excepciones Contratos)</relationshipLabel>
    <relationshipName>Excepciones_Caso1</relationshipName>
    <type>Lookup</type>
</CustomField>