force-app/main/default/objects/SEG_Excepciones_Caso__c/fields/SEG_PopUp__c.field-meta.xml
<CustomField>
    <fullName>SEG_PopUp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pop-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>